[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prosodyai-langchain"
version = "0.1.0"
description = "ProsodyAI integration for LangChain"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "ProsodyAI" }]
keywords = ["prosody", "emotion", "langchain", "ai", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "langchain-core>=0.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/ProsodyAI/langchain"
Repository = "https://github.com/ProsodyAI/langchain"
